--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,18 @@
-body{
-    background-image: url('https://d26lpennugtm8s.cloudfront.net/stores/335/332/products/papel-de-parede-jardim-branco-e-rosa-hana-lerner1-3dfba7248904b11b0d15409506373889-640-0.png');background-size: 100vh; font-family: jokerman;
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+}
+body {
+    background-image: url('https://d26lpennugtm8s.cloudfront.net/stores/335/332/products/papel-de-parede-jardim-branco-e-rosa-hana-lerner1-3dfba7248904b11b0d15409506373889-640-0.png');
+    background-size: auto 100vh;
+    font-family: jokerman;
     height: 100vh;
   }
-  
   .menu {
     background-color: pink;
-    
   }
-  .menu ul {
+  .menu ul{
     display: flex;
     justify-content: space-around;
   }
@@ -21,10 +26,10 @@ body{
     text-decoration: underline;
   }
   .site-title, 
-  .site-subtitle{
-    color: blue; 
-    text-align: center;
+  .site-subtitle {
+   color: Blue;
+   text-align: center;
   }
-  .site-subtitle{
+  .site-subtitle {
     font-style: italic;
   }
